Handle optional block stream transaction output (#10615)
- Handle transaction output when it exists
- Log cloud bucket path prefix if set

Signed-off-by: Xin Li <xin@hashgraph.com>